--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/node": "20.19.4",
+    "@types/react": "19.1.8",
     "@types/react-dom": "^19",
     "@types/scrollreveal": "^0.0.11",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "5.8.3"
   }
 }
